# STM32-CMSIS-HAL-CMake-Template-Project

./: CMakeLists.txt  README.md
project/: main.c  main.cpp
project/Src/: main.c
project/Src/ONLY_CMSIS_SAMPLE/: main.c
